--- a/ProjectEkkoUI/src/app/nav-bar/nav-bar.component.html
+++ b/ProjectEkkoUI/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav style="margin-bottom: 20px;" class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" routerLink="/news">Ekko!</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -16,7 +16,7 @@
           <a class="nav-link" routerLink="/news">News</a>
         </li>
         <li class="nav-item active">
-          <a class="nav-link" href="#">Food</a>
+          <a class="nav-link" routerLink="/food">Food</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
