--- a/ProjectEkkoUI/src/app/pages/news/news/news.component.html
+++ b/ProjectEkkoUI/src/app/pages/news/news/news.component.html
@@ -1,36 +1,12 @@
-<!-- 
-    <div class="card bg-dark text-white" *ngFor="let news of newsCollection">
-        <img id="urlToImage" src="{{ news.urlToImage }}" class="card-img" alt="...">
-        <div class="card-img-overlay">
-          <h5 class="card-title">{{ news.title }}</h5>
-          <p class="card-text">{{ news.description }}</p>
-          <p class="card-text">{{ news.author }}</p>
-        </div>
-      </div> -->
-
-      <!-- <div class="card mb-3" style="max-width: 540px;" *ngFor="let news of newsCollection">
-        <div class="row no-gutters">
-          <div class="col-md-4">
-            <img src="{{ news.urlToImage }}" class="card-img" alt="...">
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">{{ news.title }}</h5>
-              <p class="card-text">{{ news.description }}</p>
-              <p class="card-text"><small class="text-muted">{{ news.author }}</small></p>
-            </div>
-          </div>
-        </div>
-      </div> -->
-
+<app-news-bar></app-news-bar>
     <div id="newsContainer" class="border row row-cols-1 row-cols-md-4">
         <div class="col mb-4" *ngFor="let news of newsCollection">
           <div class="card">
-            <a href=" {{ news.url }}">
+            <a href=" {{ news.url }}" target="_blank">
             <img src="{{ news.urlToImage }}" class="card-img-top" alt="...">
             </a>
             <div class="card-body">
-              <h5 class="card-title"><a href="{{ news.url }}">{{ news.title }}</a></h5>
+              <h5 class="card-title"><a href="{{ news.url }}" target="_blank">{{ news.title }}</a></h5>
               <p class="card-text">{{ news.description }}</p>
             </div>
           </div>
