--- a/ProjectEkkoUI/src/app/pages/news/news-bar/news-bar.component.html
+++ b/ProjectEkkoUI/src/app/pages/news/news-bar/news-bar.component.html
@@ -1,16 +1,15 @@
 <nav id='subNewsBar' class="fixed-top navbar navbar-expand-lg navbar-light bg-success">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="#"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#">Today's Headlines</a>
+        <a class="nav-item nav-link" (click)="ge">Today's Headlines</a>
         <a class="nav-item nav-link" href="#">US News</a>
         <a class="nav-item nav-link" href="#">Entertainment</a>
         <a class="nav-item nav-link" href="#">Sports</a>
         <a class="nav-item nav-link" href="#">Finance</a>
-        <a class="nav-item nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
       </div>
     </div>
   </nav>
