--- a/ProjectEkkoUI/src/app/shared/page-not-found/page-not-found.component.html
+++ b/ProjectEkkoUI/src/app/shared/page-not-found/page-not-found.component.html
@@ -1,1 +1,1 @@
-<img src="https://image.freepik.com/free-vector/error-404-page-found-man-sweeping-floor_82574-10307.jpg">
+<img id="img404" src="https://image.freepik.com/free-vector/error-404-page-found-man-sweeping-floor_82574-10307.jpg">
