base functionality for news and recipe search complete

--- a/ProjectEkkoUI/src/app/pages/news/news-bar/news-bar.component.css
+++ b/ProjectEkkoUI/src/app/pages/news/news-bar/news-bar.component.css
@@ -3,3 +3,11 @@
     margin-top: 50px;
     width: 100%;
 }
+
+.navitem:hover{
+    cursor: pointer !important;
+}
+
+.navitem{
+    cursor: pointer !important;
+}
