--- a/ProjectEkkoUI/src/app/pages/news/news-bar/news-bar.component.html
+++ b/ProjectEkkoUI/src/app/pages/news/news-bar/news-bar.component.html
@@ -5,11 +5,11 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" (click)="ge">Today's Headlines</a>
-        <a class="nav-item nav-link" href="#">US News</a>
-        <a class="nav-item nav-link" href="#">Entertainment</a>
-        <a class="nav-item nav-link" href="#">Sports</a>
-        <a class="nav-item nav-link" href="#">Finance</a>
+        <a class="nav-item nav-link" (click)="getNews('worldNews')">Today's Headlines</a>
+        <a class="nav-item nav-link" (click)="getNews('usNews')">US News</a>
+        <a class="nav-item nav-link" (click)="getNews('entertainment')">Entertainment</a>
+        <a class="nav-item nav-link" (click)="getNews('sports')">Sports</a>
+        <a class="nav-item nav-link" (click)="getNews('business')">Business</a>
       </div>
     </div>
   </nav>
