committing before merging again with airton to get API parts

--- a/ProjectEkkoUI/src/app/core/post/components/post/post.component.html
+++ b/ProjectEkkoUI/src/app/core/post/components/post/post.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div [ngClass]='class'>
     <div class="card-body">
         <div>
             <p class="card-title">{{post.owner.username}}</p>
