Completed integrating current user with the post, various functionality with user

--- a/ProjectEkkoUI/src/app/core/post/components/comment/comment.component.html
+++ b/ProjectEkkoUI/src/app/core/post/components/comment/comment.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div [ngClass]='class'>
     <div class="card-body">
         <span>
             <p class="card-title">{{comment.owner.username}}</p>
