--- a/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
+++ b/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
@@ -24,6 +24,9 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/register">Register</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/friends">Friends</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <button id="logoutButtonOnNavbar" class="btn btn-outline-danger my-2 my-sm-0 pull-right"
