--- a/ProjectEkkoUI/src/app/core/post/components/post/post.component.html
+++ b/ProjectEkkoUI/src/app/core/post/components/post/post.component.html
@@ -6,8 +6,9 @@
         </div>
         <p class="card-text">{{post.content}}</p>
         <hr>
-        <app-reactions-container [input-reactions]='post.reactions'></app-reactions-container>
+        <app-reactions-container [input-reactions]='post.reactions' [input-type]='"post"' [input-id]='post.id'></app-reactions-container>
         <hr>
-        <app-comments-container [input-comments]='post.comments'></app-comments-container>
+        <app-create-comment [input-comments]='post.comments' [input-id]='post.id'></app-create-comment>
+        <app-comments-container [input-comments]='post.comments' [input-id]='post.id'></app-comments-container>
     </div>
 </div>
