--- a/ProjectEkkoUI/src/app/pages/friends/components/friends/friends.component.html
+++ b/ProjectEkkoUI/src/app/pages/friends/components/friends/friends.component.html
@@ -1,4 +1,4 @@
-<form class="form-signin" (submit)="update()" id="logform">
+<form class="form-signin" (submit)="submit()" id="logform">
     <h1 class="h3 mb-3 font-weight-normal">Follow!</h1>
     <label for="inputUsername" class="sr-only">username</label>
     <input type="text" id="inputUsername" 
