--- a/ProjectEkkoUI/src/app/core/post/components/reactions-container/reactions-container.component.html
+++ b/ProjectEkkoUI/src/app/core/post/components/reactions-container/reactions-container.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button 
+    <button @fade
         type="button" 
         [ngClass]='userOwned(entry)' 
         *ngFor='let entry of uniqueList'
