--- a/ProjectEkkoUI/src/app/shared/test-page/test-page.component.html
+++ b/ProjectEkkoUI/src/app/shared/test-page/test-page.component.html
@@ -1,3 +1,1 @@
-<div>
-    <app-post *ngFor='let post of testPosts' [input-post]='post'></app-post>
-</div>
+<app-posts-container [input-posts]='testPosts'></app-posts-container>
