--- a/ProjectEkkoUI/src/app/core/post/components/create-comment/create-comment.component.html
+++ b/ProjectEkkoUI/src/app/core/post/components/create-comment/create-comment.component.html
@@ -1,8 +1,10 @@
-<div class="form-group">
-    <label for="exampleFormControlTextarea1">New Comment:</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-    placeholder="Enter New Comment!" [(ngModel)]='content'></textarea>
-</div>
-<div class='button-right'>
-    <button class='btn btn-secondary submit-button' (click)='save()'>Submit</button>
+<div class='create-comment-container'>
+    <div class="form-group">
+        <label for="exampleFormControlTextarea1">New Comment:</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" [placeholder]='placeholder'
+            [(ngModel)]='content'></textarea>
+    </div>
+    <div class='button-right'>
+        <button [ngClass]='buttonActive()' (click)='save()'>Submit</button>
+    </div>
 </div>
