--- a/ProjectEkkoUI/src/app/shared/footer/footer.component.html
+++ b/ProjectEkkoUI/src/app/shared/footer/footer.component.html
@@ -1,1 +1,18 @@
-<p>footer works!</p>
+<div class='empty-block'>    
+</div>
+
+<nav id="fixedFooter" class="navbar navbar-expand-lg text-white navbar-secondary bg-secondary fixed-bottom">
+    <span class="navbar-brand">Footer</span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link">Message</a>
+            </li>
+        </ul>
+    </div>
+    <br>
+</nav>
