--- a/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
+++ b/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
@@ -1,4 +1,7 @@
-<nav id="fixedNavbar" style="margin-bottom: 20px;" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+<div class='empty-block'>    
+</div>
+
+<nav id="fixedNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
   <a class="navbar-brand" routerLink="/news">Ekko!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
