--- a/ProjectEkkoUI/src/app/core/post/components/posts-container/posts-container.component.html
+++ b/ProjectEkkoUI/src/app/core/post/components/posts-container/posts-container.component.html
@@ -1,5 +1,5 @@
 <div *ngIf='postsFetched()'>
-    <app-create-post [input-posts]='posts' (postsChange)='postsChange($event)' (pageChange)='pageChange($event)'></app-create-post>
+    <app-create-post (pageChange)='pageChange($event)'></app-create-post>
 
     <hr>
 
