--- a/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
+++ b/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
@@ -30,7 +30,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <button id="logoutButtonOnNavbar" class="btn btn-outline-danger my-2 my-sm-0 pull-right"
-        type="submit">Logout</button>
+        (click)="logout()">Logout</button>
     </form>
   </div>
 </nav>
