--- a/ProjectEkkoUI/src/app/core/post/components/posts-container/posts-container.component.html
+++ b/ProjectEkkoUI/src/app/core/post/components/posts-container/posts-container.component.html
@@ -5,7 +5,7 @@
 
     <app-post *ngFor='let post of posts' [input-post]='post'></app-post>
 
-    <div class='paging-container' *ngIf='pageType()'>
+    <div class='paging-container' *ngIf='maxPage && pageType()'>
         <div class="btn-group btn-group-toggle" data-toggle="buttons">
             <label class="btn btn-secondary" (click)='clickLeft()'>
                 <span name="options" id="option1"> {{"<"}} </span>
@@ -19,7 +19,7 @@
         </div>
     </div>
     
-    <div class='paging-container' *ngIf='!pageType()'>
+    <div class='paging-container' *ngIf='maxPage && !pageType()'>
         <div ngbDropdown class="d-inline-block">
             <button class="btn btn-secondary" id="dropdownBasic1" ngbDropdownToggle>Page</button>
             <div ngbDropdownMenu aria-labelledby="dropdownBasic1" class='bg-secondary'>
