Added direct message functionality, now working on implementing group chat

--- a/ProjectEkkoUI/src/app/core/message/components/dir-message/dir-message.component.html
+++ b/ProjectEkkoUI/src/app/core/message/components/dir-message/dir-message.component.html
@@ -1,5 +1,5 @@
 <div id="new-dm">
-    <form class="create-new-dm" (submit)="createNewDM">
+    <form class="create-new-dm" (submit)="createNewDM()">
         <h2>Person to DM</h2>
         <!-- <input type="text" id="inputQuizTitle" name="input-quiz-title" class="form-control" placeholder="Quiz Title" required
         autofocus [(ngModel)]="quizzes.quiz_title"> -->
