--- a/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
+++ b/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
@@ -13,7 +13,7 @@
         <a class="nav-link" href="#">Feed<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="/dirmsg">Message</a>
+        <a class="nav-link" routerLink="/dirmsg">Message</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/news">News</a>
