--- a/ProjectEkkoUI/src/app/pages/friends/components/friends/friends.component.html
+++ b/ProjectEkkoUI/src/app/pages/friends/components/friends/friends.component.html
@@ -1,3 +1,4 @@
+
 <form class="form-signin" (submit)="submit()" id="logform">
     <h1 class="h3 mb-3 font-weight-normal">Follow!</h1>
     <label for="inputUsername" class="sr-only">username</label>
@@ -13,7 +14,7 @@
 
 <div class="container2">
     <h1 style="text-decoration: underline;">Following</h1>
-    <li *ngFor="let user of currentTable">
+    <li *ngFor="let user of currentTable" (click)='clickFriend(user)'>
         {{user.username}}
     </li>
 </div>
