--- a/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
+++ b/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
@@ -10,10 +10,13 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Feed<span class="sr-only">(current)</span></a>
+        <a class="nav-link" routerLink="/feed">My Feed</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href="#">Message</a>
+        <a class="nav-link" routerLink="/friends">Friends</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/message">Message</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" routerLink="/news">News</a>
@@ -26,12 +29,6 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/register">Register</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/testpage">test</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/friends">Friends</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
