--- a/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
+++ b/ProjectEkkoUI/src/app/shared/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
 </div>
 
 <nav id="fixedNavbar" class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" routerLink="/news">Ekko!</a>
+  <a class="navbar-brand" routerLink="/home">Ekko!</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
     aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
