--- a/ProjectEkkoUI/src/app/pages/login/components/login/login.component.html
+++ b/ProjectEkkoUI/src/app/pages/login/components/login/login.component.html
@@ -1,5 +1,6 @@
+<div id="space"></div>
 <form class="form-signin" (submit)="login()" id="logform">
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Please Log in</h1>
     <label for="inputUsername" class="sr-only">username</label>
     <input type="text" id="inputUsername" 
         name="input-username"
@@ -16,6 +17,6 @@
         required
         [(ngModel)]="credentials.password">
     <p id="error-message">{{errorMessage}}</p>
-    <button class="btn btn-lg btn-secondary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-secondary btn-block" type="submit">Log in</button>
 
 </form>
